--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.FormInputs{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.MarginBottom8{
+  margin-bottom: 8px;
+}
+
+.Buttons{
+  display: flex;
+}
+
+.MarginRight8{
+  margin-right: 8px;
+}
